# sykl

./: Cargo.toml  LICENCE  README.md  aliases.js  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  main.yml  rust.yml
bikeshare/: all.html  fn.join.html  fn.update_status.html  index.html  sidebar-items.js
bikeshare/api/: constant.BIKESHARE_SERVER.html  constant.CLIENT_IDENTIFIER.html  fn.get.html  fn.information.html  fn.information_with_root.html  fn.status.html  fn.status_with_root.html  index.html  sidebar-items.js
bikeshare/types/: constant._IMPL_DESERIALIZE_FOR_Api.html  constant._IMPL_DESERIALIZE_FOR_ApiData.html  constant._IMPL_DESERIALIZE_FOR_Information.html  constant._IMPL_DESERIALIZE_FOR_JoinedStation.html  constant._IMPL_DESERIALIZE_FOR_JoinedStatus.html  constant._IMPL_DESERIALIZE_FOR_Status.html  (+14 more)
components/bikeshare/: Cargo.toml  README.md
components/bikeshare/src/: api.rs  lib.rs  types.rs
components/bikeshare/tests/: integration.rs
components/bikeshare/tests/cases/: 0.input.json  1.input.json  1.output.json  3.input.json  bad_info_input.yml  bad_status_input.yml
components/bikeshare/tests/cases/join/: 2.input.json  2.output.json
components/sykl/: Cargo.toml  README.md
components/sykl-formatting/: Cargo.toml
components/sykl-formatting/src/: lib.rs
components/sykl-formatting/tests/: integration.rs
components/sykl-formatting/tests/cases/: 0.output.txt  1.input.json  1.output.txt  2.input.json  2.output.txt  3.input.json  3.output.txt  4.input.json  4.output.txt  5.input.json  5.output.txt
components/sykl-rest/: Cargo.toml  README.md
components/sykl-rest/src/: main.rs
components/sykl/src/: formatting.rs  main.rs
src/: api.rs  bikeshare.rs  formatting.rs  main.rs
sykl/: all.html  fn.handle_error.html  fn.main.html  fn.print.html  index.html  sidebar-items.js  struct.Void.html
sykl_formatting/: all.html  constant.EXTRA_PADDING.html  constant.HEADER.html  constant.PLACEHOLDER.html  fn.pad.html  fn.pad_into_buffer.html  fn.pretty_print_stations.html  index.html  sidebar-items.js  struct.Row.html
sykl_rest/: all.html  enum.InternalError.html  fn.main.html  fn.update_status_sync.html  index.html  sidebar-items.js  struct.all_stations.html  struct.station.html  type.Stations.html
(+55 files in other folders)
