[package]
name = "sykl-formatting"
version = "0.1.0"
authors = ["Erlend Tobiassen <erlend.tobiassen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bikeshare = { version = "0.1", path = "../bikeshare" }

[dev-dependencies]
datatest = "0.6"
serde_json = "1.0"